--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/pwa": "^12.0.3",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
+    "dexie": "^3.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
